tests/sumo/pedestrian_model/nonInteracting/errors/disconnected_trip_ignore/errors.sumo.agg
Warning: 1 total messages of type: No connection between % '%' and % '%' found.
